# dpplib

./: .gitignore  .gitmodules  CMakeLists.txt  DCallback.hpp  DCommon.cpp  DCommon.hpp  DCsv.cpp  DCsv.h  DCsv.hpp  DFilesystem.h  DLog.cpp  DLog.h  DLog.hpp  DNetwork.cpp  DNetwork.h  DNetwork.hpp  DPath.cpp  DPath.h  DPath.hpp  DPathWatcher.cpp  DPathWatcher.h  DPreferences.cpp  DPreferences.h  DPreferences.hpp  DShell.cpp  DShell.h  DString.cpp  DString.h  DString.hpp  DStringGrid.cpp  DStringGrid.h  DStringGrid.hpp  DSyncFile.cpp  DSyncWatcher.cpp  DTcpServer.cpp  DTcpServer.h  DTcpServer.hpp  DUdpServer.cpp  DUdpServer.hpp  DUpdate.cpp  (+9 more)
TODO/: TODO.cpp
backup/: DCallback.hpp  DTcpServer.cpp  DUdpServer.cpp  DUdpServer.hpp
boost/: CMakeCache.txt  DPPLIBConfig.cmake  DPPLIBConfigVersion.cmake  Makefile  cmake_install.cmake
boost/include/: Makefile  cmake_install.cmake
boost/lib/: Makefile  cmake_install.cmake
cmake/: AddUninstallTarget.cmake  Config.cmake.in  DBoostFinder.cmake  DCMakeHelper.cmake  DMainHelper.cmake  FindGoogleTest.cmake  install.cmake  pc.in
docs/: CMakeLists.txt
example/: CMakeLists.txt  DStringGridDEMO.h  demo.csv  main.cpp
example/drest-client/: CMakeLists.txt
example/libdpp-demo/: DStringGridDEMO.cpp
example/libdpp-mixed-server/: libdpp-mixed-server.cbp  main.cpp
example/mixed-server/: libdpp-mixed-server.cbp
example/qt-demo/: DppLibDEMO.cbp
example/rest-client/: CMakeLists.txt  rest-client.cpp
examples/: CMakeLists.txt
examples/build-mega-demo-Desktop_Qt_5_12_11_GCC_64bit-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
examples/build-mega-demo-Desktop_Qt_5_12_11_GCC_64bit-Debug/dep/: cmake_install.cmake
examples/build-mega-demo-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt.prev  MegaDEMO.cbp  cmake_install.cmake  qtcsettings.cmake
examples/build-mega-demo-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/MegaDEMO_autogen/: moc_predefs.h
examples/build-mega-demo-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/MegaDEMO_autogen/EWIEGA46WW/: moc_mainwindow.cpp
examples/build-mega-demo-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/dep/: DPPLIB.cbp  cmake_install.cmake
examples/build-mega-demo-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Settings.json  build.ninja  cmake_install.cmake  posix_spawn  qtcsettings.cmake
examples/build-mega-demo-Desktop_Qt_5_15_2_GCC_64bit-Debug/MegaDEMO_autogen/: deps  moc_predefs.h
examples/build-mega-demo-Desktop_Qt_5_15_2_GCC_64bit-Debug/data/: default.qss
examples/build-mega-demo-Desktop_Qt_5_15_2_GCC_64bit-Debug/dep/: cmake_install.cmake
examples/build-mega-demo-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
examples/build-mega-demo-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/dep/: cmake_install.cmake
examples/build-mega-demo-Desktop_Qt_6_0_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
examples/build-mega-demo-Desktop_Qt_6_0_1_GCC_64bit-Debug/MegaDEMO_autogen/: deps  moc_predefs.h
examples/build-mega-demo-Desktop_Qt_6_0_1_GCC_64bit-Debug/dep/: cmake_install.cmake
examples/drest-client/: CMakeLists.txt  main.cpp
examples/mega-demo/: CMakeLists.txt  Spinner.qml  calculator-qml.qml  calculator-qml.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  spin.qml
examples/rest-client/: CMakeLists.txt  rest-client.cpp
include/: CMakeLists.txt
include/dpplib/: DChrono.h  DError.h  DLog.h  DPath.h  DPathWatcher.h  DPreferences.h  DSettings.h  DShell.h  DString.h  DStringGrid.h  DSyncFile.h  DSyncWatcher.h  DTree.h  DUpdate.h  DValue.h  DVector.h  DWindow.h
include/dpplib/network/: DNetwork.h  DRESTClient.h  DUri.h
include/dpplib/qt/: DFormLog.h  DQApp.h  DQCheckBoxDelegate.h  DQProcess.h  DQProgressBarDelegate.h  DQSpinnerWidget.h  DQWindow.h  DSplashScreen.h
include/libdpp/: .DFilesystem.h.kate-swp  CMakeLists.txt  DChrono.h  DCsv.h  DError.h  DFilesystem.h  DLog.h  DLog.h~RF18d591c7.TMP  DPath.h  DPathWatcher.h  DPreferences.h  DSettings.h  DShell.h  DString.h  DStringGrid.h  DSyncFile.h  DSyncWatcher.h  DTree.h  DTree.h~RF241f31ad.TMP  DUpdate.h  DValue.h  DVector.h  DWindow.h
include/libdpp/network/: CMakeLists.txt  DRESTClient.h  DTcpServer.h  DUri.h
include/libdpp/qt/: CMakeLists.txt  DCheckBoxDelegate.h  DFormLog.h  DProgressDelegate.h  DQApp.h  DQLabel.h  DQProcess.h  DQProgressBar.h  DQShell.h  DQSpinnerWidgetDelegate.h  DQWidget.h  DQWindow.h  DQt.h  DSpinnerWidget.h  DSplashScreen.h  ui_dformlog.h
install/include/libdpp/: DShell.h  DSyncFile.h  DWindow.h  export.h
install/include/libdpp/network/: DNetwork.h
install/include/mylib/: export.h
lib/: CMakeLists.txt  DChrono.cpp  DCsv.cpp  DLog.cpp  DPath.cpp  DPathWatcher.cpp  DPreferences.cpp  DSettings.cpp  DShell.cpp  DString.cpp  DStringGrid.cpp  DSyncFile.cpp  DSyncWatcher.cpp  DTree.cpp  DUpdate.cpp  DValue.cpp  DVector.cpp  DWindow.cpp
lib/network/: DNetwork.cpp  DRESTClient.cpp  DRESTClientAsync.cpp  DTcpServer.cpp  DUdpServer.cpp  DUri.cpp
lib/qt/: DCheckBoxDelegate.cpp  DFormLog.cpp  DFormLog.ui  DProgressDelegate.cpp  DQApp.cpp  DQCheckBoxDelegate.cpp  DQLabel.cpp  DQProcess.cpp  DQProgressBar.cpp  DQProgressBarDelegate.cpp  DQShell.cpp  DQSpinnerWidget.cpp  DQSpinnerWidgetDelegate.cpp  DQWidget.cpp  DQWindow.cpp  DQt.cpp  DSpinnerWidget.cpp  DSplashScreen.cpp  dformlog.ui
network/: DRESTClient.cpp  DRESTClient.h  DUdpServer.cpp  DUri.cpp
network/example/build-rest-client-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  rest-client.cbp
network/example/build-rest-client-Desktop_Qt_5_15_0_MinGW_64_bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  rest-client.cbp
network/example/mixed-server/: main.cpp
network/example/rest-client - Copia/: main.cpp
qt/: DQt.h
test/: CMakeLists.txt  dpath_test_dirs.cpp  dpath_test_files.cpp  dstring_test.cpp  dupdate_test.cpp
tests/: CMakeLists.txt  dpath_test_dirs.cpp  dpath_test_files.cpp  dupdate_test.cpp
(+127 files in other folders)
